--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul>
             
-        <li><a href="https://kakodevidr009.github.io/Barbearia-Alura-Emanuel/">HOME</a></li>
+        <li><a href="https://cassssssssssssssssssiiiiiuuuuuuu.github.io/Aarbearia-Alura-Gustavo/">HOME</a></li>
         <li><a href="">PRODUTOS</a></li>
         <li><a href=""> CONTATOS</a></li>
 
